k8s/base/services/media/radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  ports:
    - port: 7878
      targetPort: 7878
      name: webui
  selector:
    app: radarr
