k8s/base/services/media/radarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`radarr.lffl.internal`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: keycloak-forward-auth
          namespace: forward-auth
